<resources>
    <string name="app_name">SubsManager</string>
    <string name="home">Home</string>
    <string name="your_subs">Your Subs</string>
    <string name="analytics">Analytics</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="back_text">Back</string>
    <string name="edit_subscription">Edit</string>
    <string name="delete_subscription">Delete</string>
    <string name="about_developers_title">About developers</string>
    <string name="subscription_name">Name:</string>
    <string name="subscription_price">Price:</string>
    <string name="subscription_start_date">Start date:</string>
    <string name="subscription_duration">Duration:</string>
    <string name="subscription_type_duration">Type duration:</string>
    <string name="every">Every</string>
    <string name="subscription_currency">Currency</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="monthly">Monthly</string>
    <string name="add_subscription_button">addSubscriptionButton</string>
    <string name="not_filled">Not all fields are filled in</string>
    <string name="select_startdate">SELECT A START DATE</string>
    <string name="no_notification">There are no notifications yet</string>
    <string name="about_developers_text">This app was developed by Ilya Kalinin and Daniil Pokrishkin.</string>
    <string name="enable_or_disable_notifications">Enable or disable notifications</string>
    <string name="currency">Currency</string>
    <string name="select_your_preferred_currency">Select your preferred currency</string>
    <string name="theme">Theme</string>
    <string name="choose_your_theme">Choose your theme</string>
    <string name="general">General</string>
    <string name="appearance">Appearance</string>
    <string name="payment_due_today">Payment due today</string>
    <plurals name="payment_due_days">
        <item quantity="zero">%d days left for payment</item>
        <item quantity="one">%d day left for payment</item>
        <item quantity="few">%d days left for payment</item>
        <item quantity="many">%d days left for payment</item>
        <item quantity="other">%d days left for payment</item>
    </plurals>
    <plurals name="payment_due_months">
        <item quantity="zero">%d months left for payment</item>
        <item quantity="one">%d month left for payment</item>
        <item quantity="few">%d months left for payment</item>
        <item quantity="many">%d months left for payment</item>
        <item quantity="other">%d months left for payment</item>
    </plurals>
    <plurals name="payment_due_years">
        <item quantity="zero">%d year left for payment</item>
        <item quantity="one">%d year left for payment</item>
        <item quantity="few">%d years left for payment</item>
        <item quantity="many">%d years left for payment</item>
        <item quantity="other">%d years left for payment</item>
    </plurals>
</resources>