<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.HomeFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home_text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/home"
            android:textAppearance="@style/header_text" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="12dp"
            app:srcCompat="@drawable/settings"
            app:tint="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/amount_subscriptions_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/header"
        android:orientation="vertical"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/amount_subscriptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/main_text"
            android:text="0₽"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/headline3"
            android:text="@string/monthly"

            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/list_subscriptions_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/amount_subscriptions_container"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/your_subs"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/your_subs"
            android:textAppearance="@style/headline3" />

        <ImageView
            android:id="@+id/add_subscription_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/home"
            android:layout_alignBottom="@+id/home"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/home"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/add_subscription_button"
            android:focusable="true"
            android:padding="12dp"
            app:srcCompat="@drawable/add"
            app:tint="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_subscriptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_subscriptions_header"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingBottom="56dp"/>

</RelativeLayout>